Text selected with double-tap should not cause vibration

Previously a haptic feedback (vibration) was performed whenever selection handles
were shown. This was problematic since double tapping on text would also cause the
selection handles to be shown. Now haptic feedback only occurs when a long press
gesture is handled. This required changing some context menu logic to return whether
or not a context menu was actually shown.

BUG=606175

Review-Url: https://codereview.chromium.org/1986783002
Cr-Commit-Position: refs/heads/master@{#395490}

Former-commit-id: 6de57089abaea05decce400f1bae7889b34e839b