third_party/WebKit/Source/web/ContextMenuClientImpl.h
@@ -42,7 +42,7 @@ class ContextMenuClientImpl final : public ContextMenuClient {
 public:
     explicit ContextMenuClientImpl(WebViewImpl* webView) : m_webView(webView) { }
     ~ContextMenuClientImpl() override {}
-    void showContextMenu(const ContextMenu*) override;
+    bool showContextMenu(const ContextMenu*, bool fromTouch) override;
     void clearContextMenu() override;
 private:
     void populateCustomMenuItems(const ContextMenu*, WebContextMenuData*);
